# C_Practice

./: .gitignore  AmazonTestInfo.txt  CMakeLists.txt  README.md  TESTGCD.cpp  TestArray.cpp  TestClass.cpp  TestClass2.cpp  TestDoubleLinkedList.cpp  TestLinkedList.cpp  TestTree.cpp  TestTrees.cpp  amazonq1.cpp  check.cpp  main.cpp
Interpreter/: lexer.cpp  lexer_test.cpp  main.cpp  token.h
MakerEdit/: CMakeLists.txt  chanceEditor.cc
NOTES/: isSameTree.cpp  isSymetric.cpp
Practice/: main.cpp  restoreIpAddress.cpp
TwoSums/: CMakeLists.txt  main.cpp
addTwoNumbers/: CMakeLists.txt  main.cpp
firstBadVersion/: main.cpp
inorderTraversal/: CMakeLists.txt  main.cpp
isBalanced/: CMakeLists.txt  main.cpp
isSameTree/: CMakeLists.txt  main.cpp
maxDepth/: CMakeLists.txt  main.cpp
mostWater/: CMakeLists.txt  main.cpp
removeDublicates_2/: CMakeLists.txt  main.cpp
removeDuplicates/: CMakeLists.txt  main.cpp
removeElements/: main.cpp
restoreIpAddress/: CMakeLists.txt  main.cpp
resturant/: main.cpp
roatate/: CMakeLists.txt  main.cpp
romantoint/: main.cpp
rotateListRight/: CMakeLists.txt  main.cpp
rotateString/: CMakeLists.txt  main.cpp
searchRotate/: CMakeLists.txt  main.cpp
sortedArrayToBST/: main.cpp
sortedListToBST/: CMakeLists.txt  main.cpp
validSodoku/: CMakeLists.txt  main.cpp
